Hero Section UI Fixed + Cards Edited for Dark Mode + Play Store  App Icons

--- a/frontend/src/components/AppDownlad/AppDownload.css
+++ b/frontend/src/components/AppDownlad/AppDownload.css
@@ -1,25 +1,31 @@
-.appdownload{
-    margin: auto auto;
-    margin-top: 100px;
-    font-size: max(3vw, 20px);
-    text-align: center;
-    font-weight: 500;
+.appdownload {
+  margin: auto auto;
+  margin-top: 100px;
+  font-size: max(3vw, 20px);
+  text-align: center;
+  font-weight: 500;
 }
 
-.app-download-platforms{
-    display: flex;
-    justify-content: center;
-    gap: max(2vw, 10px);
+.app-download-platforms {
+  display: flex;
+  justify-content: center;
+  gap: max(2vw, 10px);
 }
 
-.app-download-platforms img{
-    margin-top: 2vw;
-    width: max(30vw, 120px);
-    max-width: 180px;
-    transition: 0.5s;
-    cursor: pointer;
+.app-download-platforms img {
+  margin-top: 2vw;
+  width: max(30vw, 120px);
+  max-width: 180px;
+  transition: 0.5s;
+  cursor: pointer;
 }
 
-.app-download-platforms img:hover{
-    transform: scale(1.1);
+.app-download-platforms img:hover {
+  transform: scale(1.1);
+  box-shadow: 0 2px 8px #a1a1a18e;
+}
+
+.app-download-platforms img.image-dark {
+  border: 1px solid #a1a1a18e;
+  border-radius: 15px;
 }
